Added header, menu, tabs

--- a/src/style.css
+++ b/src/style.css
@@ -4,15 +4,37 @@
 
 .tabs-enter-active,
 .tabs-leave-active {
-  transition: all 0.5s ease;
+  transition: all .5s;
+  max-width: 100px;
 }
 
 .tabs-enter-from,
 .tabs-leave-to {
   opacity: 0;
-  transform: translateY(5px);
+  transform: translateX(-20px);
+  max-width: 0px;
 }
 
 *::-webkit-scrollbar {
-  height: 1px;
+  height: 10px;
+}
+
+.nav-enter-active,
+.nav-leave-active {
+  transition: all .4s;
+  max-width: 1000px;
+}
+
+.nav-enter-from,
+.nav-leave-to {
+  max-width: 10px;
+  opacity: 0;
+}
+
+.nav-move {
+  position: relative;
+}
+
+.menuBack {
+  background: linear-gradient(360deg, yellowgreen, green);
 }
