--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+@keyframes windowShow {
+  0% {
+    opacity: 0;
+    transform: translateX(-10px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+@keyframes windowHide {
+  0% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(10px);
+  }
+}
+
 .tabs-enter-active,
 .tabs-leave-active {
   transition: all 0.5s;
@@ -13,6 +35,14 @@
   opacity: 0;
   transform: translateX(-20px);
   max-width: 0px;
+}
+
+.windowShow {
+  animation: windowShow 0.3s ease-in-out;
+}
+
+.windowHide {
+  animation: windowHide 0.3s ease-in-out;
 }
 
 *::-webkit-scrollbar {
@@ -27,7 +57,7 @@
 
 .nav-enter-from,
 .nav-leave-to {
-  max-width: 10px;
+  max-width: 0px;
   opacity: 0;
 }
 
